<resources>
    <string name="app_name">ASGrocery</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>
        <string name="add_stock">Add Stock</string>
        <string name="purachase">Purchase</string>
        <string name="str_search_stock">Search Stock</string>
        <string name="list_stock">List Stock</string>
        <string name="log_out">Log Out</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="sales">Sales</string>
        <string name="please_enter_username_and_password">Please enter username and password!</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="log_in">Log In</string>
        <string name="sign_up">Sign Up</string>
        <string name="registration_is_successful">Registration is Successful!</string>
        <string name="passwords_should_match">Passwords should match!</string>
        <string name="please_enter_valid_email">Please enter valid email!</string>
        <string name="please_fill_all_the_fields">Please fill all the fields!</string>
        <string name="email">Email</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="back_to_log_in">Back to Log In</string>
        <string name="welcome">"Welcome "</string>
        <string name="item_name">Item Name</string>
        <string name="qty_in_stock">Qty In Stock</string>
        <string name="price">Price</string>
        <string name="returnable">Returnable</string>
        <string name="nonreturnable">NonReturnable</string>
        <string name="cancel">Cancel</string>
        <string name="save">Save</string>
        <string name="item_code">Item Code</string>
        <string name="qty_purchased">Qty Purchased</string>
        <string name="date_of_purchase">Date of Purchase</string>
        <string name="submit">Submit</string>
        <string name="customer_name">Customer Name</string>
        <string name="customer_email">Customer Email</string>
        <string name="qty_sold">Qty Sold</string>
        <string name="date_of_sales">Date of Sales</string>
        <string name="search">Search</string>
        <string name="search_results"><b>Item: </b>%s \n<b>Quantity: </b>%d \n<b>Price: </b>%.2f</string>

</resources>