<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ass_stocks"

            android:title="@string/add_stock" />

        <item
            android:id="@+id/nav_sales"

            android:title="@string/sales" />

        <item
            android:id="@+id/nav_purchanse"

            android:title="@string/purachase" />

        <item
            android:id="@+id/nav_search_stock"

            android:title="@string/str_search_stock" />

        <item
            android:id="@+id/nav_list_stock"

            android:title="@string/list_stock" />

        <item
            android:id="@+id/nav_logout"

            android:title="@string/log_out" />
    </group>
</menu>