<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height ="match_parent"
    android:background="@color/grey1"
    android:gravity="bottom"
    android:orientation="vertical"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<!--    android:layout_height="@dimen/nav_header_height"-->
<!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--    android:paddingTop="@dimen/activity_vertical_margin"-->
<!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--    android:paddingBottom="@dimen/activity_vertical_margin"-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"

        app:srcCompat="@mipmap/ic_launcher_round" />
<!--    android:paddingTop="@dimen/nav_header_vertical_spacing"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
<!--    android:paddingTop="@dimen/nav_header_vertical_spacing"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:visibility="gone" />
</LinearLayout>